--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>😀Veeru's personal website</title>
+  <link rel="stylesheet" href="CSS/style.css" />
 </head>
 
-<body>
-  <table cellspacing="20">
+<body ">
+  <table cellspacing="20" >
     <tr>
       <td>
         <img src="my image-modified.png" alt="My Image" width="100" />
@@ -27,7 +28,7 @@
   </table>
 
   <hr />
-  <h3>Education</h3>
+  <h3  >Education </h3>
   <ul>
 
 
